--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* --- МАСКОТ --- */
+        /* --- МАСКООООТ --- */
         .mascot-container { font-size: 8rem; animation: bounce 3s infinite ease-in-out; margin-bottom: 20px; filter: drop-shadow(0 10px 10px rgba(0,0,0,0.2)); }
         @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-20px); } }
 
@@ -568,3 +568,4 @@
 
 </body>
 </html>
+
